qa: Add note about parser tests

--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -516,6 +516,10 @@ Die im Folgenden beschriebenen Tests entsprechen allen Tests seit \textbf{Beginn
 \end{testClass}
 
 \subsubsection{Model: Parser}
+
+Die Testabdeckung des Prolog-Parsers beträgt 100\% Instruktions- und 100\% Zweigabdeckung.
+Da dieser vom Institut gegeben war, wird hier nicht näher auf die Tests eingegangen.
+
 \subsubsection{Model: Visualisation}
 
 \newcommand{\visualisationTest}[5]{
